Version 3.0.0 Release (#279)
* Initial changes to get API Server compiling with g2.jar 3.0

* Added recorded test data for version 3.0.0

* Removed cached test data for version 2.x

* - Updated version 3.0.0 of the REST API specification
- Updated pom.xml for version 3.0.0-SNAPSHOT
- Updated for version 3.0.0 g2.jar function names ("V2" removal)
- Removed parsing of "MATCH_SCORE" field and "matchScore" fields as well
- Changed parsing of "UTYPE_CODE" to "USAGE_TYPE"

* Updated REST API Spec version number to 3.0.0

* Updated to the latest API spec sans entity types and entity classes

* Updates to remove functionality pertaining to entity types and entity classes

* Removed outdated tests after removing entity type and entity class functionality

* Added cached test data for version 3.0 after removing enitty type and entity class tests

* Updated to latest 3.0.0 REST API specification

* Updated version 3.0.0 dependencies to use Maven central beta releases for 3.0.0-b01 for Senzing dependencies

* Updated Senzing dependencies to version 3.0.0-b02

* Updated to latest senzing-rest-api-specification

* Updated pom.xml for version 3.0.0-b01 pre-release

* Updated excluded method set on EngineStatsLoggingHandler (fetchNext)

* #272 Add duo-lingo

* #272 Formatting

* Updated pom.xml version for pre-release build

* #272 Fix test docker-compose

* Update API server to version 3.0.0-b04 for a new pre-release

* - Changes to support removal of REF_SCORE and LENS_CODE from native/raw JSON
- Changes to remove warning about empty path for `GET /` endpoint
- Changes to remove SLF4j warnings by adding the slf4j-simple binding

* More robust fix for ReplayNativeApiProvider when Senzing is not installed.  Also included test cache for 3.x

* Updated to REST API spec sub-module 3.0.0 release version

* Updates to CHANGELOG.md, Dockerfile, README.md and pom.xml for 3.0.0 release

* Changed 'master' to 'main' branch in workflow
